--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-    <h1>Carbon Calculator</h1>
+    <h1 id="font-face">Carbon Calculator</h1>
+    <div class="inputBox">
+
+        <input type="text">
+    </div>
 </body>
 
 </html>
