Switched to normal CSS

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
-    <h1 id="font-face">Carbon Calculator</h1>
-    <div class="inputBox">
-
-        <input type="text">
+    <h1>Carbon Calculator</h1>
+    <div class="flex-container">
+        <div class="inputBox">
+            <p>Enter your EAC (Estimated Annual Consumption)</p>
+            <input type="text">
+        </div>
     </div>
 </body>
 
