--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="sidebar">
-        <p id="top-text">Enter your estimated annual consumption (Kwh)</p>
+        <p id="top-text">Enter your estimated annual consumption for electricity (Kwh)</p>
         <label class="number-field">
             <input id="input" type="number" placeholder="Enter EAC" />
         </label>
@@ -39,13 +39,19 @@
     <div class="main-section">
         <div class="custom-details">
             <h1 id="personal">Your Statistics:</h1>
-            <p id="TotalOutput"></p>
-            <p id="Flights"></p>
+            <p id="usage"></p>
+            <p id="totalOutput"></p>
+            <p id="people"></p>
+            <p id="house"></p>
+            <p id="flights"></p>
+            <p id="miles"></p>
         </div>
         <div class="average-details">
-            <h1 id="average">Average UK Citizens Statistics</h1>
+            <h1 id="average">Average UK Citizens Statistics:</h1>
+            <p></p>
         </div>
     </div>
+
 </body>
 
 </html>
