Added average info

--- a/index.html
+++ b/index.html
@@ -39,16 +39,25 @@
     <div class="main-section">
         <div class="custom-details">
             <h1 id="personal">Your Statistics:</h1>
-            <p id="usage"></p>
-            <p id="totalOutput"></p>
-            <p id="people"></p>
-            <p id="house"></p>
-            <p id="flights"></p>
-            <p id="miles"></p>
+            <ul style="list-style: circle;">
+                <p id="usage"></p>
+                <p id="totalOutput"></p>
+                <p id="people"></p>
+                <p id="house"></p>
+                <p id="flights"></p>
+                <p id="miles"></p>
+            </ul>
         </div>
         <div class="average-details">
             <h1 id="average">Average UK Citizens Statistics:</h1>
-            <p></p>
+            <ul>
+                <p id="average-usage">Their EAC is 2700 kWh</p>
+                <p id="average-totalOutput">CO2 output from electricity is: 475 Kg per year.</p>
+                <p id="average-people">They are estimated to have 2 to 3 people in your home.</p>
+                <p id="average-house">They are estimated to live in Flat.</p>
+                <p id="average-flights">Their electricity emissions are equivalent to 5 hours of flight.</p>
+                <p id="average-miles">Their CO2 output equivalent to driving a petrol car for 1188 miles.</p>
+            </ul>
         </div>
     </div>
 
